完成了一个简版关注列表

--- a/popup.html
+++ b/popup.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-    <ul class="helper-nav">
-        <li class="helper-nav-item"><a href="following-list.html" class="nav-item-following">关注列表</a></li>
-        <li class="helper-nav-item"><a class="nav-item-clear">清除数据</a></li>
+    <!-- <ul class="helper-nav">
+        <li class="helper-nav-item"><a href="following-list.html" target="_blank" class="nav-item-following">关注列表</a></li>
     </ul>
-    <script src="./popup.js"></script>
+    <script src="./popup.js"></script> -->
 </body>
 
 </html>
